# wiki-api-rs

./: .env.example  Cargo.toml
src/: conf.rs  main.rs
src/api/: banner.rs  class.rs  entry.rs  heartbeat.rs
src/models/: banner.rs  class.rs  entry.rs  heartbeat.rs  mod.rs
src/utils/: mongo.rs
