[package]
name = "wiki-api"
version = "0.1.0"
authors = ["Broono Lu <broono@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "0.9.0"
bson = "0.14.0"
actix-rt = "1.0.0"
actix-web = "2.0.0"
actix-cors = "0.2.0"
log = "0.4.8"
env_logger = "0.7.1"
serde = "1.0.104"
serde_json = "1.0.44"
serde_derive = "1.0.104"
chrono = "0.4.10"
dotenv = "0.15.0"
futures = "0.3.1"
